@@ -1,3 +1,8 @@
+2024-06-09  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
+	Regenerated.
+
 2024-01-08  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.70 released.
